Fixing overlay between rounds

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         <div id="roundCounter">
             <h2>Round</h2>
         </div>
+        <div class="guesses">
         <div id="currentWord"></div>
-        <div class="img-container">
-        </div>
         <div id="incorrect"></div>
+        </div>
+        <div class="img-container"></div>
+        
         <table>
             <tr>
                 <th>Wins</th>
