fixing image placement

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div id="incorrect"></div>
         </div>
         <div id="img-container">
-            <img class="pokemon" id="silhouette"/>
-            <img class="pokemon" id="revealed"/>
+            <img class="pokemon hidden" id="silhouette" alt="hidden pokemon" />
+            <img class="pokemon hidden" id="revealed" alt="revealed pokemon"/>
         </div>
         <div class="dashboard">
             <div class="tablediv">
