Added sounds on correct answer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div id="jumbo">Press any key to begin</div>
     </div>
-
+    <audio autoplay id="sound"></audio>
     <script src="./assets/javascript/game.js"></script>
 </body>
 
