2 sec pause before roundadvance

--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <div class="wrapper">
         <div class="dashboard">
             <div id="currentWord"></div>
-            <div id="incorrect"></div>
+            <div id="incorrect">
+                <span class="pokeball"></span>
+                <span class="pokeball"></span>
+                <span class="pokeball"></span>
+                <span class="pokeball"></span>
+                <span class="pokeball"></span>
+                <span class="pokeball"></span>
+            </div>
         </div>
         <div id="img-container">
             <img class="pokemon hidden" id="silhouette" alt="hidden pokemon" />
