Reveal name and show guesses left

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
         <div class="dashboard">
             <div id="currentWord"></div>
             <div id="incorrect">
-                <span class="pokeball"></span>
-                <span class="pokeball"></span>
-                <span class="pokeball"></span>
-                <span class="pokeball"></span>
-                <span class="pokeball"></span>
-                <span class="pokeball"></span>
+                <span class="pokeball" empty="true"></span>
+                <span class="pokeball" empty="true"></span>
+                <span class="pokeball" empty="true"></span>
+                <span class="pokeball" empty="true"></span>
+                <span class="pokeball" empty="true"></span>
+                <span class="pokeball" empty="true"></span>
             </div>
         </div>
         <div id="img-container">
             <img class="pokemon hidden" id="silhouette" alt="hidden pokemon" />
             <img class="pokemon hidden" id="revealed" alt="revealed pokemon"/>
+            <h4 id='revealname'></h4>
         </div>
         <div class="dashboard">
             <div class="tablediv">
